# Stock-Market-Dashboard

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  JP_Morgan_Analytics_Guide.md  QUICKSTART.md  README.md  app.py  eda_analysis.py  forecasting.py  forecasting_app.py  pyproject.toml  requirements.txt  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-quality.yml
