[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-market-analytics"
version = "1.0.0"
description = "Comprehensive Stock Market EDA & Forecasting Platform with ARIMA and LSTM Models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aayush", email = "aayush@example.com"}
]
keywords = [
    "stock market",
    "financial analytics",
    "time series forecasting",
    "ARIMA",
    "LSTM",
    "correlation analysis",
    "portfolio analysis",
    "technical analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

requires-python = ">=3.8"

dependencies = [
    "streamlit>=1.0.0",
    "yfinance>=0.2.0",
    "pandas>=1.1.0",
    "numpy>=1.19.0",
    "plotly>=4.0.0",
    "scikit-learn>=0.24.0",
    "statsmodels>=0.12.0",
    "scipy>=1.5.0",
    "tensorflow>=2.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "flake8>=3.9.0",
    "black>=21.0",
    "isort>=5.0",
    "mypy>=0.910"
]

jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "notebook>=6.0.0"
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/stock-dashboard"
Documentation = "https://github.com/YOUR_USERNAME/stock-dashboard#readme"
Repository = "https://github.com/YOUR_USERNAME/stock-dashboard.git"
Issues = "https://github.com/YOUR_USERNAME/stock-dashboard/issues"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensemble_trailing_comma = false

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=. --cov-report=html"
